--- a/content/about.html
+++ b/content/about.html
@@ -13,8 +13,9 @@ title: About me
             <div class="row about-section">
                 <h4><i class="fa fa-graduation-cap"></i> Education:</h4>
                 <ul>
-                    <li>10/2012 – now – Wroclaw University of Technology, Faculty of Architecture - bachelor studies in architecture</li>
+                    <li>03/2016 – now – Wroclaw University of Technology, Faculty of Architecture - master studies in architecture</li>
                     <li>09/2014 – 02/2015 – Slovak University of Technology in Bratislava, Fakulty of Architecture – Erasmus+ scholarship</li>
+                    <li>10/2012 – 02/2016 – Wroclaw University of Technology, Faculty of Architecture - bachelor studies in architecture</li>
                 </ul>
             </div>
             <div class="row about-section">
