--- a/content/about.html
+++ b/content/about.html
@@ -22,7 +22,16 @@ title: About me
                 <h4><i class="fa fa-briefcase"></i> Work experience:</h4>
                 <ul>
                     <li>
-                        02/2015 – Mazur Arquitectos – student internship
+                        03/2016 - 06/2016 – Discovery Center of Centennial Hall - Wrocław - internship
+                        <ul>
+                            <li>architecture education for children and seniors</li>
+                            <li>organizing architectural workshops and events</li>
+                            <li>promoting modernistic architecture of Wrocław</li>
+                        </ul>
+                    </li>
+                </ul>
+                    <li>
+                        02/2015 – Mazur Arquitectos &Ingeneros Asociados – Wrocław - student internship
                         <ul>
                             <li>restoration of historical buildings</li>
                             <li>conceptual and technical CAD drawings</li>
