--- a/content/about.html
+++ b/content/about.html
@@ -26,7 +26,7 @@ title: About me
                         <ul>
                             <li>architecture education for children and seniors</li>
                             <li>organizing architectural workshops and events</li>
-                            <li>promoting modernistic architecture of Wrocław</li>
+                            <li>promoting modernistic architecture heritage of Wrocław</li>
                         </ul>
                     </li>
                 </ul>
@@ -42,8 +42,8 @@ title: About me
             <div class="row about-section">
                 <h4><i class="fa fa-book"></i> Student organizations:</h4>
                 <ul>
-                    <li>Student research group on construction KONSA – member</li>
-                    <li>Student organisation Humanizacja Środowiska Miejskiego - interventions in public space</li>
+                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/">more info</a></p></li>
+                    <li>2012-2014 - member of Student Research Group on Construction KONSA</li>
                 </ul>
             </div>
             <div class="row about-section">
