--- a/content/about.html
+++ b/content/about.html
@@ -14,7 +14,7 @@ title: About me
                 <h4><i class="fa fa-graduation-cap"></i> Education:</h4>
                 <ul>
                     <li>03/2016 – now – Wroclaw University of Technology, Faculty of Architecture - master studies in architecture</li>
-                    <li>09/2014 – 02/2015 – Slovak University of Technology in Bratislava, Fakulty of Architecture – Erasmus+ scholarship</li>
+                    <li>09/2014 – 02/2015 – Slovak University of Technology in Bratislava, Faculty of Architecture – Erasmus+ scholarship</li>
                     <li>10/2012 – 02/2016 – Wroclaw University of Technology, Faculty of Architecture - bachelor studies in architecture</li>
                 </ul>
             </div>
@@ -42,31 +42,38 @@ title: About me
             <div class="row about-section">
                 <h4><i class="fa fa-book"></i> Student organizations:</h4>
                 <ul>
-                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/">more info</a></p></li>
+                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> more info </a></p></li>
                     <li>2012-2014 - member of Student Research Group on Construction KONSA</li>
                 </ul>
             </div>
             <div class="row about-section">
                 <h4><i class="fa fa-calendar"></i> Workshops, courses, seminars:</h4>
+                 <h5>2016</h5>
+                <ul>
+                    <li>Summer School of Architecture – Living Unit – organisation and participation <p class='link'><a href="http://ssa.pwr.edu.pl/"> more info </a></p>	</li>
+                    <li>Max Berg’s Days of Architecture – organisation <p class='link'><a href="http://max-berg.pl/en/"> more info </a></p></li>
+                    <li>Akcja: Zrównać Kampus – research on accessibility of WrUT campus for disabled students - participation</li>
+                    <li>Hack4 Culture – night hackaton – participation, Microsoft prize <p class='link'><a href="http://hack4culture.pl/en/"> more info </a></p></li>
+                </ul>
                 <h5>2015</h5>
                 <ul>
-                    <li>XIX National Meeting of Architecture Students BYDGOSSA 2015 - participant</li>
-                    <li>Warsaw Urban Workshops – second edition - participant</li>
+                    <li>XIX National Meeting of Architecture Students BYDGOSSA 2015 - participation <p class='link'><a href="http://bydgossa2015.wixsite.com/bydgossa/bydgossa-eng"> more info </a></p></li>
+                    <li>Warsaw Urban Workshops – second edition - participation <p class='link'><a href="http://sarp.warszawa.pl/warsztaty/warszawskie-warsztaty-urbanistyczne-2/"> more info (in Polish) </a></p> </li>
                     <li>International Symposium "R.B.Fuller's World of Ideas" – organisation</li>
-                    <li>International Design Seminar Workshop re.craft – TU Delft – main prize</li>
-                    <li>Wspólna Inicjatywa Architektoniczna - 6th edition – seminars and workshops about design for all</li>
+                    <li>International Design Seminar Workshop re.craft – TU Delft – participation, main prize <p class='link'><a href="http://indesem.nl/"> more info </a></p> </li>
+                    <li>Wspólna Inicjatywa Architektoniczna - 6th edition – seminars and workshops about design for all <p class='link'><a href="https://www.facebook.com/Wsp%C3%B3lna-Inicjatywa-Architektoniczna-805585472833443/?fref=ts"> more info </a></p> </li>
                     <li>WUT Pavilion workshops – research on cardboard constructions</li>
                 </ul>
                 <h5>2014</h5>
                 <ul>
-                    <li>International seminar "Housing Estates, What's Next?" - Prague – participant</li>
-                    <li>International seminar "Public Spaces" – Bratislava – participant</li>
-                    <li>Inter-university workshops „Stalowa Wola-Miasto Ogród” - restoration of the modernistic urban structure</li>
-                    <li>Inter-university workshops „reACHtywacja” - participant</li>
+                    <li>International seminar "Housing Estates, What's Next?" - Prague – participation</li>
+                    <li>International seminar "Public Spaces" – Bratislava – participation</li>
+                    <li>Inter-university workshops „Stalowa Wola-Miasto Ogród” - restoration of the modernistic urban structure - participation</li>
+                    <li>Inter-university workshops „reACHtywacja” - participation <p class='link'><a href="https://reachtywacja.wordpress.com/"> more info (in Polish) </a></p></li>
                 </ul>
                 <h5>2013</h5>
                 <ul>
-                    <li>Student research camp about preservation and restoration of the traditional Hutsul architecture - Ukraine</li>
+                    <li>Student research camp about preservation and restoration of the traditional Hutsul architecture - Worochta,Ukraine - participation</li>
                 </ul>
             </div>
         </div>
