--- a/content/about-pl.html
+++ b/content/about-pl.html
@@ -22,58 +22,58 @@ title: About me
                 <h4><i class="fa fa-briefcase"></i> Work experience:</h4>
                 <ul>
                     <li>
-                        03/2016 - 06/2016 – Discovery Center of Centennial Hall - Wrocław - internship
+                        03/2016 - 06/2016 – Centrum Poznawcze Hali Stulecia - Wrocław - praktyki
                         <ul>
-                            <li>architecture education for children and seniors</li>
-                            <li>organizing architectural workshops and events</li>
-                            <li>promoting modernistic architecture heritage of Wrocław</li>
+                            <li>edukacja architektoniczna dzieci i seniorów</li>
+                            <li>organizowanie warsztatów i wydarzeń architektonicznych</li>
+                            <li>promocja wrocławskiej architektury modernistycznej</li>
                         </ul>
                     </li>
                 </ul>
                     <li>
-                        02/2015 – Mazur Arquitectos & Ingeneros Asociados – Wrocław - student internship
+                        02/2015 – Mazur Arquitectos & Ingeneros Asociados – Wrocław - praktyki studenckie
                         <ul>
-                            <li>restoration of historical buildings</li>
-                            <li>conceptual and technical CAD drawings</li>
+                            <li>adaptacje budynków historycznych</li>
+                            <li>projekty koncepcyjne i budowlane obiektów użyteczności publicznej</li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div class="row about-section">
-                <h4><i class="fa fa-book"></i> Student organizations:</h4>
+                <h4><i class="fa fa-book"></i> Organizacje studenckie:</h4>
                 <ul>
-                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> more info </a></p></li>
-                    <li>2012-2014 - member of Student Research Group on Construction KONSA</li>
+                    <li>2014 - teraz - członek Koła Naukowego Humanizacja Środowiska Miejskiego <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> więcej informacji </a></p></li>
+                    <li>2012-2014 - członek Koła Naukowego przy Zakładzie Konstrukcji WA PWr "KONSA"</li>
                 </ul>
             </div>
             <div class="row about-section">
-                <h4><i class="fa fa-calendar"></i> Workshops, courses, seminars:</h4>
+                <h4><i class="fa fa-calendar"></i> Warsztaty, kursy, konferencje:</h4>
                  <h5>2016</h5>
                 <ul>
-                    <li>Summer School of Architecture – Living Unit – organisation and participation <p class='link'><a href="http://ssa.pwr.edu.pl/"> more info </a></p>	</li>
-                    <li>Max Berg’s Days of Architecture – organisation <p class='link'><a href="http://max-berg.pl/en/"> more info </a></p></li>
-                    <li>Akcja: Zrównać Kampus – research on accessibility of WrUT campus for disabled students - participation</li>
-                    <li>Hack4 Culture – night hackaton – participation, Microsoft prize <p class='link'><a href="http://hack4culture.pl/en/"> more info </a></p></li>
+                    <li>Letnia Szkoła Architektury – Living Unit – Wrocław - organizacja i udział <p class='link'><a href="http://ssa.pwr.edu.pl/pl/"> więcej informacji </a></p>	</li>
+                    <li>Dni Architektury Maksa Berga <p class='link'><a href="http://max-berg.pl/"> więcej informacji </a></p></li>
+                    <li>Akcja: Zrównać Kampus – badanie dostępności Kampusu PWr dla osób niepełnosprawnych - udział</li>
+                    <li>Hack4 Culture – nocny hackaton – udział, nagroda Microsoft <p class='link'><a href="http://hack4culture.pl/"> więcej informacji </a></p></li>
                 </ul>
                 <h5>2015</h5>
                 <ul>
-                    <li>XIX National Meeting of Architecture Students BYDGOSSA 2015 - participation <p class='link'><a href="http://bydgossa2015.wixsite.com/bydgossa/bydgossa-eng"> more info </a></p></li>
-                    <li>Warsaw Urban Workshops – second edition - participation <p class='link'><a href="http://sarp.warszawa.pl/warsztaty/warszawskie-warsztaty-urbanistyczne-2/"> more info (in Polish) </a></p> </li>
-                    <li>International Symposium "R.B.Fuller's World of Ideas" – organisation</li>
-                    <li>International Design Seminar Workshop re.craft – TU Delft – participation, main prize <p class='link'><a href="http://indesem.nl/"> more info </a></p> </li>
-                    <li>Wspólna Inicjatywa Architektoniczna - 6th edition – seminars and workshops about design for all <p class='link'><a href="https://www.facebook.com/Wsp%C3%B3lna-Inicjatywa-Architektoniczna-805585472833443/?fref=ts"> more info </a></p> </li>
-                    <li>WUT Pavilion workshops – research on cardboard constructions</li>
+                    <li>XIX Ogólnopolskie Spotkania Studentów Architektury BYDGOSSA 2015 - udział <p class='link'><a href="http://bydgossa2015.wixsite.com/bydgossa/bydgossa-eng"> więcej informacji </a></p></li>
+                    <li>Warszawskie Warsztaty Urbanistyczne – druga edycja - udział <p class='link'><a href="http://sarp.warszawa.pl/warsztaty/warszawskie-warsztaty-urbanistyczne-2/"> więcej informacji </a></p> </li>
+                    <li>Międzynarodowe sympozjum naukowe "R.B.Fuller's World of Ideas" – organizacja</li>
+                    <li>Międzynarodowe seminarium i warsztaty InDeSem 2015 re.craft – TU Delft – udział, główna nagroda <p class='link'><a href="http://indesem.nl/"> więcej informacji (w języku angielskim) </a></p> </li>
+                    <li>Wspólna Inicjatywa Architektoniczna - szósta edycja – udział w seminarium i warsztatach dot. projektowania bez barier <p class='link'><a href="https://www.facebook.com/Wsp%C3%B3lna-Inicjatywa-Architektoniczna-805585472833443/?fref=ts"> więcej informacji</a></p> </li>
+                    <li>Pawilon Wystawowy PWr - warsztaty realizacyjne – udział <p class='link'><a href="http://archi-tektura.eu/"> więcej informacji </a></p></li>
                 </ul>
                 <h5>2014</h5>
                 <ul>
-                    <li>International seminar "Housing Estates, What's Next?" - Prague – participation</li>
-                    <li>International seminar "Public Spaces" – Bratislava – participation</li>
-                    <li>Inter-university workshops „Stalowa Wola-Miasto Ogród” - restoration of the modernistic urban structure - participation</li>
-                    <li>Inter-university workshops „reACHtywacja” - participation <p class='link'><a href="https://reachtywacja.wordpress.com/"> more info (in Polish) </a></p></li>
+                    <li>Międzynarodowe seminarium "Housing Estates, What's Next?" - Praga – udział</li>
+                    <li>Międzynarodowe seminarium "Public Spaces" – Bratysława – udział</li>
+                    <li>Międzyuczelniane warsztaty „Stalowa Wola-Miasto Ogród” - udział</li>
+                    <li>Międzyuczelniane warsztaty „reACHtywacja” - udział <p class='link'><a href="https://reachtywacja.wordpress.com/"> więcej informacji (in Polish) </a></p></li>
                 </ul>
                 <h5>2013</h5>
                 <ul>
-                    <li>Student research camp about preservation and restoration of the traditional Hutsul architecture - Worochta,Ukraine - participation</li>
+                    <li>Wyjazd studialny dotyczący inwentaryzacji i ochrony tradycyjnej architektury huculskiej - Worochta, Ukraina - udział</li>
                 </ul>
             </div>
         </div>
