--- a/content/about-pl.html
+++ b/content/about-pl.html
@@ -7,19 +7,19 @@ title: About me
         <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
             <div class="row story">
                 <p class='story'>
-                    I am a fourth-year student of architecture. By taking part in many workshops and initiatives I gained both interpersonal skills and practical knowledge in field of architecture, urbanism and design.  My main field of interest is a social aspect of the designed space. 
+                    Jestem studentką czwartego roku architektury. Biorąc udział w wielu warsztatach i innych inicjatywach architektonicznych zdobyłam zarówno praktyczną wiedzę jak i doświadczenie w pracy w grupie. Jestem szczególnie zainteresowana socjologią architektury i działaniami związanymi z edukacją architektoniczną.
                 </p>
             </div>
             <div class="row about-section">
-                <h4><i class="fa fa-graduation-cap"></i> Education:</h4>
+                <h4><i class="fa fa-graduation-cap"></i> Edukacja:</h4>
                 <ul>
-                    <li>03/2016 – now – Wroclaw University of Technology, Faculty of Architecture - master studies in architecture</li>
-                    <li>09/2014 – 02/2015 – Slovak University of Technology in Bratislava, Faculty of Architecture – Erasmus+ scholarship</li>
-                    <li>10/2012 – 02/2016 – Wroclaw University of Technology, Faculty of Architecture - bachelor studies in architecture</li>
+                    <li>03/2016 – obecnie – Politechnika Wrocławska, Wydział Architektury, kierunek Architektura i Urbanistyka - studia magisterskie</li>
+                    <li>09/2014 – 02/2015 – Slovenská technická univerzita v Bratislave, Fakulta architektúry – stypendium Erasmus+ </li>
+                    <li>10/2012 – 02/2016 – Politechnika Wrocławska, Wydział Architektury, kierunek Architektura - studia inżynierskie</li>
                 </ul>
             </div>
             <div class="row about-section">
-                <h4><i class="fa fa-briefcase"></i> Work experience:</h4>
+                <h4><i class="fa fa-briefcase"></i> Doświadczenie zawodowe:</h4>
                 <ul>
                     <li>
                         03/2016 - 06/2016 – Centrum Poznawcze Hali Stulecia - Wrocław - praktyki
@@ -42,8 +42,8 @@ title: About me
             <div class="row about-section">
                 <h4><i class="fa fa-book"></i> Organizacje studenckie:</h4>
                 <ul>
-                    <li>2014 - teraz - członek Koła Naukowego Humanizacja Środowiska Miejskiego <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> więcej informacji </a></p></li>
-                    <li>2012-2014 - członek Koła Naukowego przy Zakładzie Konstrukcji WA PWr "KONSA"</li>
+                    <li>2014 - obecnie - członek Koła Naukowego Humanizacja Środowiska Miejskiego <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> więcej informacji </a></p></li>
+                    <li>2012 - 2014 - członek Koła Naukowego przy Zakładzie Konstrukcji WA PWr "KONSA"</li>
                 </ul>
             </div>
             <div class="row about-section">
