--- a/content/about.html
+++ b/content/about.html
@@ -42,7 +42,7 @@ title: About me
             <div class="row about-section">
                 <h4><i class="fa fa-book"></i> Student organizations:</h4>
                 <ul>
-                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> more info </a></p></li>
+                    <li>2014 - now - member of student organisation Humanizacja Środowiska Miejskiego (Humanisation of Urban Environment) <p class='link'><a href="https://www.facebook.com/HumanizacjaSrodowiskaMiejskiego/"> more info (in Polish) </a></p></li>
                     <li>2012-2014 - member of Student Research Group on Construction KONSA</li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@ title: About me
                     <li>Warsaw Urban Workshops – second edition - participation <p class='link'><a href="http://sarp.warszawa.pl/warsztaty/warszawskie-warsztaty-urbanistyczne-2/"> more info (in Polish) </a></p> </li>
                     <li>International Symposium "R.B.Fuller's World of Ideas" – organisation</li>
                     <li>International Design Seminar Workshop re.craft – TU Delft – participation, main prize <p class='link'><a href="http://indesem.nl/"> more info </a></p> </li>
-                    <li>Wspólna Inicjatywa Architektoniczna - 6th edition – seminars and workshops about design for all <p class='link'><a href="https://www.facebook.com/Wsp%C3%B3lna-Inicjatywa-Architektoniczna-805585472833443/?fref=ts"> more info </a></p> </li>
+                    <li>Wspólna Inicjatywa Architektoniczna - 6th edition – seminars and workshops about design for all <p class='link'><a href="https://www.facebook.com/Wsp%C3%B3lna-Inicjatywa-Architektoniczna-805585472833443/?fref=ts"> more info (in Polish) </a></p> </li>
                     <li>WUT Pavilion workshops – research on cardboard constructions</li>
                 </ul>
                 <h5>2014</h5>
