Added English version of the site

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-            <a href="/projects/wwu">
+            <a href="/<%= lang_code(@item) %>/projects/wwu">
                 <div class="project-stripe">
                     <img src="/images/stripes/wwu2.png" />
                     <div class='description'>
@@ -12,7 +12,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/fabryka">
+            <a href="/<%= lang_code(@item) %>/projects/fabryka">
                 <div class="project-stripe">
                     <img src="/images/stripes/fabryka.png" />
                     <div class='description'>
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/pawilon">
+            <a href="/<%= lang_code(@item) %>/projects/pawilon">
                 <div class="project-stripe">
                     <img src="/images/stripes/jez.jpg" />
                     <div class='description'>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/gecko">
+            <a href="/<%= lang_code(@item) %>/projects/gecko">
                 <div class="project-stripe">
                     <img src="/images/stripes/gekon.png" />
                     <div class='description'>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/interior">
+            <a href="/<%= lang_code(@item) %>/projects/interior">
                 <div class="project-stripe">
                     <img src="/images/stripes/interior.png" />
                     <div class='description'>
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/sancova">
+            <a href="/<%= lang_code(@item) %>/projects/sancova">
                 <div class="project-stripe">
                     <img src="/images/stripes/sancova.png" />
                     <div class='description'>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/przedszkole">
+            <a href="/<%= lang_code(@item) %>/projects/przedszkole">
                 <div class="project-stripe">
                     <img src="/images/stripes/przedszkola.jpg" />
                     <div class='description'>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/projects/ach">
+            <a href="/<%= lang_code(@item) %>/projects/ach">
                 <div class="project-stripe">
                     <img src="/images/stripes/ach.png" />
                     <div class='description'>
