--- a/content/en/index.html
+++ b/content/en/index.html
@@ -3,7 +3,7 @@
         <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
             <a href="/<%= lang_code(@item) %>/projects/wwu">
                 <div class="project-stripe">
-                    <img src="/images/stripes/wwu2.png" />
+                    <img src="<%= stripe_path('wwu2') %>" />
                     <div class='description'>
                         <p class='title'>Lights and shadows</p>
                         <p class='content'>
@@ -14,7 +14,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/fabryka">
                 <div class="project-stripe">
-                    <img src="/images/stripes/fabryka.png" />
+                    <img src="<%= stripe_path('fabryka') %>" />
                     <div class='description'>
                         <p class='title'>Science and Technology Park in Opole</p>
                         <p class='content'>
@@ -25,7 +25,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/pawilon">
                 <div class="project-stripe">
-                    <img src="/images/stripes/jez.jpg" />
+                    <img src="<%= stripe_path('jez') %>" />
                     <div class='description'>
                         <p class='title'>WUT Pavilion</p>
                         <p class='content'>
@@ -36,7 +36,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/gecko">
                 <div class="project-stripe">
-                    <img src="/images/stripes/gekon.png" />
+                    <img src="<%= stripe_path('gekon') %>" />
                     <div class='description'>
                         <p class='title'>The Gecko</p>
                         <p class='content'>
@@ -47,7 +47,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/interior">
                 <div class="project-stripe">
-                    <img src="/images/stripes/interior.png" />
+                    <img src="<%= stripe_path('interior') %>" />
                     <div class='description'>
                         <p class='title'>Idea Box</p>
                         <p class='content'>
@@ -58,7 +58,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/sancova">
                 <div class="project-stripe">
-                    <img src="/images/stripes/sancova.png" />
+                    <img src="<%= stripe_path('sancova') %>" />
                     <div class='description'>
                         <p class='title'>Adapter</p>
                         <p class='content'>
@@ -69,7 +69,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/przedszkole">
                 <div class="project-stripe">
-                    <img src="/images/stripes/przedszkola.jpg" />
+                    <img src="<%= stripe_path('przedszkola') %>" />
                     <div class='description'>
                         <p class='title'>Kindergarten in Brzeg</p>
                         <p class='content'>
@@ -80,7 +80,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/ach">
                 <div class="project-stripe">
-                    <img src="/images/stripes/ach.png" />
+                    <img src="<%= stripe_path('ach') %>" />
                     <div class='description'>
                         <p class='title'>ACH! Student Media Center</p>
                         <p class='content'>
