Renamed project Biblioteka to Dyplom

--- a/content/en/projects/dyplom.html
+++ b/content/en/projects/dyplom.html
@@ -1,9 +1,9 @@
 ---
-title: Biblioteka
+title: Dyplom
 ---
 
 <div class="row after-gap">
-    <h2>Biblioteka</h2>
+    <h2>Dyplom</h2>
     <p class='cooperation'>
         <span class='headline'>Cooperation:</span> Humanizacja Środowiska Miejskiego, EtaKsi, MOS, LabDigiFab
     </p>
@@ -18,91 +18,91 @@ title: Biblioteka
 </div>
 <div class="row after-gap">
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1A.png' />
+        <img class='photo' src='/images/dyplom/1A.png' />
     </div>
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1B.png' />
+        <img class='photo' src='/images/dyplom/1B.png' />
     </div>
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1C.png' />
+        <img class='photo' src='/images/dyplom/1C.png' />
     </div>
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1D.png' />
+        <img class='photo' src='/images/dyplom/1D.png' />
     </div>
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1E.png' />
+        <img class='photo' src='/images/dyplom/1E.png' />
     </div>
     <div class="col-md-2">
-        <img class='photo' src='/images/biblioteka/1F.png' />
+        <img class='photo' src='/images/dyplom/1F.png' />
     </div>
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/2.png' />
-</div>
-<div class="row after-gap">
-    <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/3a.png' />
-    </div>
-    <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/3b.png' />
-    </div>
-    <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/3c.png' />
-    </div>
+    <img class='photo' src='/images/dyplom/2.png' />
 </div>
 <div class="row after-gap">
     <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/4a.png' />
+        <img class='photo' src='/images/dyplom/3a.png' />
     </div>
     <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/4b.png' />
+        <img class='photo' src='/images/dyplom/3b.png' />
     </div>
     <div class="col-md-4">
-        <img class='photo' src='/images/biblioteka/4c.png' />
+        <img class='photo' src='/images/dyplom/3c.png' />
     </div>
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/5.png' />
+    <div class="col-md-4">
+        <img class='photo' src='/images/dyplom/4a.png' />
+    </div>
+    <div class="col-md-4">
+        <img class='photo' src='/images/dyplom/4b.png' />
+    </div>
+    <div class="col-md-4">
+        <img class='photo' src='/images/dyplom/4c.png' />
+    </div>
+</div>
+<div class="row after-gap">
+    <img class='photo' src='/images/dyplom/5.png' />
 </div>
 <div class="row after-gap">
     <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/6a.png' />
+        <img class='photo' src='/images/dyplom/6a.png' />
     </div>
     <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/6b.png' />
+        <img class='photo' src='/images/dyplom/6b.png' />
     </div>
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/7.png' />
+    <img class='photo' src='/images/dyplom/7.png' />
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/8.png' />
+    <img class='photo' src='/images/dyplom/8.png' />
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/9.png' />
+    <img class='photo' src='/images/dyplom/9.png' />
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/10.png' />
+    <img class='photo' src='/images/dyplom/10.png' />
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/11.png' />
-</div>
-<div class="row after-gap">
-    <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/12a.png' />
-    </div>
-    <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/12b.png' />
-    </div>
+    <img class='photo' src='/images/dyplom/11.png' />
 </div>
 <div class="row after-gap">
     <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/13a.png' />
+        <img class='photo' src='/images/dyplom/12a.png' />
     </div>
     <div class="col-md-6">
-        <img class='photo' src='/images/biblioteka/13b.png' />
+        <img class='photo' src='/images/dyplom/12b.png' />
     </div>
 </div>
 <div class="row after-gap">
-    <img class='photo' src='/images/biblioteka/14.png' />
+    <div class="col-md-6">
+        <img class='photo' src='/images/dyplom/13a.png' />
+    </div>
+    <div class="col-md-6">
+        <img class='photo' src='/images/dyplom/13b.png' />
+    </div>
+</div>
+<div class="row after-gap">
+    <img class='photo' src='/images/dyplom/14.png' />
 </div>
