Added Prowizorka project to home page

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -89,6 +89,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/prowizorka">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('prowizorka') %>" />
+                    <div class='description'>
+                        <p class='title'>Prowizorka (Quick Fix)</p>
+                        <p class='content'>
+                            Mobile application intended to promote street artists and informal culture of any kind. It can track  locations of your favourite artists and art pieces in the neighbourhood and allows to donate them some money via PayPal.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
