--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -89,6 +89,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/prowizorka">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('prowizorka') %>" />
+                    <div class='description'>
+                        <p class='title'>Prowizorka</p>
+                        <p class='content'>
+                            Projekt aplikacji mobilnej służącej do promowania artystów ulicznych i szeroko pojętej kultury nieformalnej i tymczasowej. Pozwala na lokalizację użytkowników oraz umożliwia wsparcie finansowe wybranego artysty, działając jak „wirtualny kapelusz”.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
