--- a/content/pl/projects/prowizorka.html
+++ b/content/pl/projects/prowizorka.html
@@ -1,19 +1,19 @@
 ---
-title: Prowizorka (Quick Fix)
+title: Prowizorka
 ---
 
 <div class="row after-gap">
-    <h2>Prowizorka (Quick Fix)</h2>
+    <h2>Prowizorka</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Kamil Banach, Jakub Kowalski, Rafał Łasocha
+        <span class='headline'>Współpraca:</span> Kamil Banach, Jakub Kowalski, Rafał Łasocha
     </p>
     <p class='year'>
-        <span class='headline'>Year:</span> 2016
+        <span class='headline'>Rok:</span> 2016
     </p>
-    <p class='type'>Mobile application</p>
-    <p><a href="http://hack4culture.pl/">Hack4Culture</a> - Microsoft Prize</p>
+    <p class='type'>Aplikacja mobilna</p>
+    <p><a href="http://hack4culture.pl/">Hack4Culture 2016</a> - Nagroda Microsoftu</p>
     <p>
-        Mobile application intended to promote street artists and informal culture of any kind. It can track  locations of your favourite artists and art pieces in the neighbourhood and allows to donate them some money via PayPal.
+        Projekt aplikacji mobilnej służącej do promowania artystów ulicznych i szeroko pojętej kultury nieformalnej i tymczasowej. Pozwala na lokalizację użytkowników oraz umożliwia wsparcie finansowe wybranego artysty, działając jak „wirtualny kapelusz”.
     </p>
 </div>
 
@@ -53,3 +53,4 @@ title: Prowizorka (Quick Fix)
 <div class="row after-gap">
     <img class='photo' src='/images/prowizorka/12.png' />
 </div>
+
