Added Trans project to homepage

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -100,6 +100,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/trans">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('trans') %>" />
+                    <div class='description'>
+                        <p class='title'>TRANSition – cross-cultural meditation center</p>
+                        <p class='content'>
+                            Meditation may be a method of self-improvement in different cultures. Main spacial idea of the project was to create universal space focused on the light and sky. It is all about trasnition - the further you go, the more light and air you get. 
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
