--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -100,6 +100,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/trans">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('trans') %>" />
+                    <div class='description'>
+                        <p class='title'>TRANSition – międzykulturowe centrum medytacji</p>
+                        <p class='content'>
+                            Medytacja traktowana jest jako metoda udoskonalenia samego siebie, uniwersalna dla różnych kultur i wyznań. Głównym założeniem przestrzennym jest motyw wędrówki w stronę światła, które może stanowić zarówno odniesienie do dążenia ku niebu, życiowej drogi jak i oczyszczenia i oświecenia umysłu. Trzon budynku stanowi więc przestrzeń oświetlana zwiększającymi się na każdym piętrze świetlikami, kierującymi wzrok odbiorcy ku górze.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
