--- a/content/pl/projects/trans.html
+++ b/content/pl/projects/trans.html
@@ -1,26 +1,26 @@
 ---
-title: TRANSition – cross-cultural meditation center
+title: TRANSition – międzykulturowe centrum medytacji
 ---
 
 <div class="row after-gap">
-    <h2>TRANSition – cross-cultural meditation center</h2>
+    <h2>TRANSition – międzykulturowe centrum medytacji</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2016
+        <span class='headline'>Rok:</span> 2016
     </p>
     <p class='type'>
-        Conceptual project
+        Projekt koncepcyjny
     </p>
     <p class='location'>
-        Location: Four Denominations District , Wrocław
+        Lokalizacja: Dzielnica Czterech Wyznań, Wrocław
     </p>
     <p class='additional_info'>
-        Total surface area: 420m2
+        Powierzchnia całkowita: 420m2
     </p>
     <p class='additional_info'>
-        Course: Inventive Methods in Architectural Design, WrUT
+        Kurs: Metody inwentyczne w projektowaniu architektonicznym, Pwr
     </p>
     <p>
-        Meditation may be a method of self-improvement in different cultures. Main spacial idea of the project was to create universal space focused on the light and sky. It is all about trasnition - the further you go, the more light and air you get. 
+        Medytacja traktowana jest jako metoda udoskonalenia samego siebie, uniwersalna dla różnych kultur i wyznań. Głównym założeniem przestrzennym jest motyw wędrówki w stronę światła, które może stanowić zarówno odniesienie do dążenia ku niebu, życiowej drogi jak i oczyszczenia i oświecenia umysłu. Trzon budynku stanowi więc przestrzeń oświetlana zwiększającymi się na każdym piętrze świetlikami, kierującymi wzrok odbiorcy ku górze.
     </p>
 </div>
 <div class="row after-gap">
@@ -58,3 +58,4 @@ title: TRANSition – cross-cultural meditation center
 <div class="row after-gap">
     <img class='photo' src='/images/trans/8.png' />
 </div>
+
