Small detail fix

--- a/content/en/projects/prowizorka.html
+++ b/content/en/projects/prowizorka.html
@@ -11,7 +11,7 @@ title: Prowizorka (Quick Fix)
         <span class='headline'>Year:</span> 2016
     </p>
     <p class='type'>Mobile application</p>
-    <p><a href="http://hack4culture.pl/">Hack4Culture</a> - Microsoft Prize</p>
+    <p><a href="http://hack4culture.pl/">Hack4Culture 2016</a> - Microsoft Prize</p>
     <p>
         Mobile application intended to promote street artists and informal culture of any kind. It can track  locations of your favourite artists and art pieces in the neighbourhood and allows to donate them some money via PayPal.
     </p>
