Added Dyplom project to the homepage

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -111,6 +111,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/dyplom">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('dyplom') %>" />
+                    <div class='description'>
+                        <p class='title'>Senior cohousing</p>
+                        <p class='content'>
+                            The project consist of two infill buildings – multifamily house and service building connected by common yard.  Living in cohousing provides better conditions for eldrely people by combining possibility of living in an independent apartment in the city center with great support from the community of neighbours.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
