--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -111,6 +111,17 @@
                     </div>
                 </div>
             </a>
+            <a href="/<%= lang_code(@item) %>/projects/dyplom">
+                <div class="project-stripe">
+                    <img src="<%= stripe_path('dyplom') %>" />
+                    <div class='description'>
+                        <p class='title'>Cohousing dla seniorów</p>
+                        <p class='content'>
+                            Zespół dwóch budynków plombowych wraz z zagospodarowaniem terenu kwartału na Nadodrzu we Wrocławiu. Składa się on z przystosowanego do potrzeb osób starszych obiektu wielorodzinnego oraz uzupełniającego budynku usługowego. Cohousing – współzamieszkiwanie – może być odpowiedzią na problemy mieszkaniowe i społeczne starzejącego się społeczeństwa łącząc zalety niezależnego mieszkania i zwiększonego wsparcia ze strony wspólnoty sąsiedzkiej.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
