--- a/content/pl/projects/dyplom.html
+++ b/content/pl/projects/dyplom.html
@@ -1,24 +1,24 @@
 ---
-title: Senior cohousing
+title: Cohousing dla seniorów
 ---
 
 <div class="row after-gap">
-    <h2>Senior cohousing</h2>
+    <h2>Cohousing dla seniorów</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2016
+        <span class='headline'>Rok:</span> 2016
     </p>
-    <p class='type'>Conceptual project</p>
+    <p class='type'>Projekt koncepcyjny</p>
     <p class='additional-info'>
-        Location: Nadodrze, Wrocław
-    </p>
-    <p class='additional-info'>
-        Total surface area: 1986m2
+        Lokalizacja: Nadodrze, Wrocław
     </p>
     <p class='additional-info'>
-        Bachelor project – thesis supervisor dr inż. arch. Grażyna Hryncewicz-Lamber
+        Powierzchnia całkowita: 1986m2
+    </p>
+    <p class='additional-info'>
+        Projekt inżynierski – promotor dr inż. arch. Grażyna Hryncewicz-Lamber
     </p>
     <p>
-        The project consist of two infill buildings – multifamily house and service building connected by common yard.  Living in cohousing provides better conditions for eldrely people by combining possibility of living in an independent apartment in the city center with great support from the community of neighbours.
+        Zespół dwóch budynków plombowych wraz z zagospodarowaniem terenu kwartału na Nadodrzu we Wrocławiu. Składa się on z przystosowanego do potrzeb osób starszych obiektu wielorodzinnego oraz uzupełniającego budynku usługowego. Cohousing – współzamieszkiwanie – może być odpowiedzią na problemy mieszkaniowe i społeczne starzejącego się społeczeństwa łącząc zalety niezależnego mieszkania i zwiększonego wsparcia ze strony wspólnoty sąsiedzkiej.
     </p>
 </div>
 <div class="row after-gap">
