Updated information about Ach project

--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -82,9 +82,9 @@
                 <div class="project-stripe">
                     <img src="<%= stripe_path('ach') %>" />
                     <div class='description'>
-                        <p class='title'>ACH! Student Media Center</p>
+                        <p class='title'>ACH! Centrum Nowych Mediów</p>
                         <p class='content'>
-                            A restoration project for a modernistic auditorium building in Wrocław. The concept includes creating a cultural center combined  with a fully-equipped recording studio and a cafe. Functional changes cause no harm for the preserved form of the building.
+                            Koncepcja programowo-przestrzenna zagospodarowania modernistycznego budynku Audytorium Chemii Uniwersytety Wrocławskiego. Zakłada stworzenie centrum kulturalne-medialnego z kawiarnią i profesjonalnym studiem nagrań, które mogłoby być wykorzystywane przez studentów sąsiedniego instytutu dziennikarstwa.
                         </p>
                     </div>
                 </div>
