--- a/content/pl/projects/ach.html
+++ b/content/pl/projects/ach.html
@@ -1,19 +1,19 @@
 ---
-title: ACH! Student Media Center
+title: ACH! Centrum Nowych Mediów
 ---
 
 <div class="row after-gap">
-    <h2>ACH! Student Media Center</h2>
+    <h2>ACH! Centrum Nowych Mediów</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Karolina Dyjach, Dorota Ręcławowicz
+        <span class='headline'>Współpraca:</span> Karolina Dyjach, Dorota Ręcławowicz
     </p>
     <p class='year'>
-        <span class='headline'>Year:</span> 2014
+        <span class='headline'>Rok:</span> 2014
     </p>
-    <p class='type'>Conceptual project</p>
-    <p class='source'>Competition and workshops "reACHtywacja"</p>
+    <p class='type'>Projekt koncepcyjny</p>
+    <p class='source'>Konkurs i warsztaty "reACHtywacja"</p>
     <p>
-        A restoration project for a modernistic auditorium building in Wrocław. The concept includes creating a cultural center combined  with a fully-equipped recording studio and a cafe. Functional changes cause no harm for the preserved form of the building. 
+        Koncepcja programowo-przestrzenna zagospodarowania modernistycznego budynku Audytorium Chemii Uniwersytety Wrocławskiego. Zakłada stworzenie centrum kulturalne-medialnego z kawiarnią i profesjonalnym studiem nagrań, które mogłoby być wykorzystywane przez studentów sąsiedniego instytutu dziennikarstwa.
     </p>
 </div>
 <div class="row after-gap">
