Updated project Przedszkole

--- a/content/en/index.html
+++ b/content/en/index.html
@@ -69,7 +69,7 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/przedszkole">
                 <div class="project-stripe">
-                    <img src="<%= stripe_path('przedszkola') %>" />
+                    <img src="<%= stripe_path('przedszkole') %>" />
                     <div class='description'>
                         <p class='title'>Kindergarten in Brzeg</p>
                         <p class='content'>
