--- a/content/en/projects/przedszkole.html
+++ b/content/en/projects/przedszkole.html
@@ -8,7 +8,7 @@ title: Kindergarten in Brzeg
         <span class='headline'>Year:</span> 2014
     </p>
     <p class='type'>Conceptual project</p>
-    <p class='source'>Kurs: Projektownie usług podstawowych w mieście; PWr</p>
+    <p class='source'>Course: The elementary housing services' desing; WrUT</p>
     <p>
         A conceptual project of a sustainable kindergarten consists of seven free-standing units connected with each other. By using glazed wooden frame structure the good quality of lighting and ventilation is provided.
     </p>
