--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -69,11 +69,11 @@
             </a>
             <a href="/<%= lang_code(@item) %>/projects/przedszkole">
                 <div class="project-stripe">
-                    <img src="<%= stripe_path('przedszkola') %>" />
+                    <img src="<%= stripe_path('przedszkole') %>" />
                     <div class='description'>
-                        <p class='title'>Kindergarten in Brzeg</p>
+                        <p class='title'>Przedszkole w Brzegu</p>
                         <p class='content'>
-                            A conceptual project of a sustainable kindergarten consists of seven free-standing units connected with each other. By using glazed wooden frame structure the good quality of lighting and ventilation is provided.
+                            Projekt zrównoważonego przedszkola składający się z siedmiu połączonych ze sobą modułów - „domków”. Ich tradycyjny kształt nawiązuje do otaczającej zabudowy a rozdrobniona kubatura zapewnia zachowanie skali przyjaznej dziecku. 
                         </p>
                     </div>
                 </div>
