--- a/content/pl/projects/przedszkole.html
+++ b/content/pl/projects/przedszkole.html
@@ -1,16 +1,22 @@
 ---
-title: Kindergarten in Brzeg
+title: Przedszkole w Brzegu
 ---
 
 <div class="row after-gap">
-    <h2>Kindergarten in Brzeg</h2>
+    <h2>Przedszkole w Brzegu</h2>
     <p class='year'>
-        <span class='headline'>Year:</span> 2014
+        <span class='headline'>Rok:</span> 2014
     </p>
-    <p class='type'>Conceptual project</p>
+    <p class='type'>Projekt koncepcyjny</p>
+    <p class='additional-info'>
+        Lokalizacja: Brzeg
+    </p>
+    <p class='additional-info'>
+        Powierzchnia całkowita: 1636m2
+    </p>
     <p class='source'>Kurs: Projektownie usług podstawowych w mieście; PWr</p>
     <p>
-        A conceptual project of a sustainable kindergarten consists of seven free-standing units connected with each other. By using glazed wooden frame structure the good quality of lighting and ventilation is provided.
+        Projekt zrównoważonego przedszkola składający się z siedmiu połączonych ze sobą modułów - „domków”. Ich tradycyjny kształt nawiązuje do otaczającej zabudowy a rozdrobniona kubatura zapewnia zachowanie skali przyjaznej dziecku. 
     </p>
 </div>
 <div class="row after-gap">
