Updated Sancova project

--- a/content/en/projects/sancova.html
+++ b/content/en/projects/sancova.html
@@ -11,6 +11,9 @@ title: Adapter
         <span class='headline'>Year:</span> 2014
     </p>
     <p class='type'>Conceptual project</p>
+    <p class='additional-info'>
+        Location: Bratislava
+    </p>
     <p class='source'>Course: Urban Design Advanced; STU Bratislava</p>
     <p>
         An urban project for the downtown of Bratislava. A combination of permament and temporary interventions in the urban fabric raises the standard of living in the neighbourhood and at the same time prevents it from the negative influance of gentrification.
