--- a/content/pl/index.html
+++ b/content/pl/index.html
@@ -62,7 +62,7 @@
                     <div class='description'>
                         <p class='title'>Adapter</p>
                         <p class='content'>
-                            An urban project for the downtown of Bratislava. A combination of permament and temporary interventions in the urban fabric raises the standard of living in the neighbourhood and at the same time prevents it from the negative influance of gentrification.
+                            Projekt rewaloryzacji urbanistycznej w śródmieściu Bratysławy. Kombinacja stałych i tymczasowych interwencji w tkance miejskiej podnosi standard życia w sąsiedztwie jednocześnie zapobiegając negatywnej w skutkach gentryfikacji.
                         </p>
                     </div>
                 </div>
