--- a/content/pl/projects/sancova.html
+++ b/content/pl/projects/sancova.html
@@ -5,15 +5,15 @@ title: Adapter
 <div class="row after-gap">
     <h2>Adapter</h2>
     <p class='cooperation'>
-        <span class='headline'>Cooperation:</span> Anne Burzlaff
+        <span class='headline'>Współpraca:</span> Anne Burzlaff
     </p>
     <p class='year'>
-        <span class='headline'>Year:</span> 2014
+        <span class='headline'>Rok:</span> 2014
     </p>
-    <p class='type'>Conceptual project</p>
-    <p class='source'>Course: Urban Design Advanced; STU Bratislava</p>
+    <p class='type'>Projekt konceptualny</p>
+    <p class='source'>Kurs: Urban Design Advanced; STU Bratislava</p>
     <p>
-        An urban project for the downtown of Bratislava. A combination of permament and temporary interventions in the urban fabric raises the standard of living in the neighbourhood and at the same time prevents it from the negative influance of gentrification.
+        Projekt rewaloryzacji urbanistycznej w śródmieściu Bratysławy. Kombinacja stałych i tymczasowych interwencji w tkance miejskiej podnosi standard życia w sąsiedztwie jednocześnie zapobiegając negatywnej w skutkach gentryfikacji.
     </p>
 </div>
 <div class="row after-gap">
